[package]
name = "haypay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
cosmwasm-std = { version = "1.5.3", features = ["staking"] }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
cw-storage-plus = { version = "1.2.0"}

[dev-dependencies]
cw-multi-test = "0.20.0"