[package]
name = "pink-panther"
version = "0.1.0"
authors = ["Saeed <hamidradpj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
base64 = "0.21.7"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = [
    "cosmwasm_1_3",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
cw20 = "1.1.2"
phf = { version = "0.11.2", features = ["macros"] }
rsa = "0.9.6"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", features = ["oid"]}
thiserror = { version = "1.0.49" }
getrandom = { version = "0.2.10", features = ["custom"] }

[dev-dependencies]
cw-multi-test = "0.17.0"
cw20-base = { version = "1.1.2", features = ["library"] }
